# bigbox

./: .gitignore  README.md  find_eng_streams.py  index.html  pyproject.toml  requirements.txt
.github/workflows/: discord_notify.yml  sync_setup_branch.yml
bigbox/: __init__.py  __main__.py  _font_cache.py  achievements.py  activity.py  app.py  audio.py  background.py  bbs_server.py  captive_portal.py  deaddrop.py  diagnostics.py  disk.py  emulator.py  events.py  eviltwin.py  games_state.py  glitch.py  gps.py  hardware.py  hashopolis.py  honeypot.py  loki.py  loot_export.py  oui.py  pcap_parse.py  power.py  qr.py  retroachievements.py  runner.py  scans.py  sdr.py  shop.py  splash.py  theme.py  tracker_history.py  trackers.py  update_checker.py  webhooks.py  wigle.py
bigbox/games/: oregon_trail.py  wargames.py
bigbox/input/: __init__.py  config.py  gpio.py  keyboard.py  probe.py
bigbox/sections/: __init__.py  _icons.py  about.py  bluetooth.py  games.py  loot.py  media.py  network.py  recon.py  settings.py  shop.py  social.py  toolbox.py  waveform.py  wireless.py
bigbox/ui/: __init__.py  achievements.py  adsb.py  anonsurf.py  arpscan.py  background_tasks.py  bbs.py  cctv.py  (+62 more)
config/: buttons.toml
docs/: index.html
memory/: MEMORY.md  project_bigbox.md  user_dustin.md
scripts/: bigbox-update.service  bigbox-update.timer  bigbox.service  firstrun.sh  fix-deps.sh  git-init-pi.sh  gpio_probe.py  hide-boot.sh  install-alfa-drivers.sh  install-osint.sh  install-ub500-drivers.sh  install.sh  install_ragnar.sh  sdcard-prepare.sh  update.sh
tests/: test_views.py
(+14 files in other folders)
