[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bigbox"
version = "0.1.0"
description = "Pentesting firmware for Raspberry Pi 4 + GamePi43"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "pygame>=2.5,<3",
  "gpiozero>=2.0",
  "lgpio>=0.2",
  "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
bigbox = "bigbox.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bigbox*"]
